# ptk

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  demo.cc  docker-compose.yml  package.xml
include/engines/: engine.h  engine_config.h  engine_tensor.h  engine_validation.h  onnx_engine.h  tensorrt_utils.h  trt_engine.h
include/operators/: add_batch_dim.h  bgr_to_rgb.h  cast_float32_to_uint8.h  cast_uint8_to_float32.h  center_crop.h  chw_to_hwc.h  hwc_to_chw.h  normalization_params.h  normalize.h  pad_to_size.h  preprocessor.h  rgb_to_bgr.h  rgb_to_gray.h
include/runtime/components/: component_interface.h  counter.h  frame_debugger.h  heartbeat.h  inference_node.h  metrics_reporter.h  node_options_helper.h  synthetic_camera.h
include/runtime/core/: logger.h  metrics.h  pipeline.h  port.h  queue_policy.h  runtime_context.h  scheduler.h  status.h  timing_helper.h  types.h
include/runtime/data/: buffer.h  frame.h  frame_msg.h  tensor.h
include/runtime/memory/: allocator.h  device_transfer.h
include/sensors/: camera.h  camera_interface.h  mac_camera.h
include/tasks/: detection_contract.h  task_contract.h  task_output.h
src/apps/: demo.cc  test_camera.cc  test_inference.cc  test_pipeline.cc  test_pipeline_synthetic.cc  test_queue_pipeline.cc
src/core/: scheduler.cc
src/engines/: engine_builder.cc  engine_tensor.cc  engine_validation.cc  onnx_engine.cc  trt_engine.cc
src/operators/: add_batch_dim.cc  bgr_to_rgb.cc  cast_float32_to_uint8.cc  cast_uint8_to_float32.cc  center_crop.cc  chw_to_hwc.cc  hwc_to_chw.cc  normalize.cc  pad_to_size.cc  preprocessor.cc  rgb_to_bgr.cc  rgb_to_gray.cc
src/runtime/components/: counter.cc  frame_debugger.cc  heartbeat.cc  inference_node.cc  metrics_reporter.cc  synthetic_camera.cc
src/runtime/core/: logger.cc  metrics.cc  pipeline.cc  runtime_context.cc  scheduler.cc
src/runtime/memory/: allocator.cc  device_transfer.cc
src/sensors/: camera.cc  mac_camera.cc
src/tasks/: detection_contract.cc  segmentation_contract.cc
